# objr

./: pyproject.toml
mods/: err.py  flt.py  fnd.py  irc.py  log.py  rss.py  tdo.py  thr.py  upt.py
objr/: reactor.py  threads.py
objx/: __init__.py  objects.py  persist.py
