[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objr"
description = "reactor"
version = "171"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
dependencies = [
    'objx',
]
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/objr"
"bugs" = "https://github.com/otpcr/objr/issues"
"source" = "https://github.com/otpcr/objr"


[tool.setuptools]
packages = [
    'objr',
]
zip-safe=true


[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
